# docs/swagger.json
@@ -135,6 +135,48 @@
                 }
             }
         },
+        "/api/v1/cronjoblog/list": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/x-json-stream"
+                ],
+                "tags": [
+                    "[系统内部]日志"
+                ],
+                "summary": "[系统内部]获取定时任务日志",
+                "operationId": "GetCronjobLog",
+                "parameters": [
+                    {
+                        "description": "RQL查询json",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Req"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Resp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Resp"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/reqapilog/get/{requestid}": {
             "get": {
                 "security": [
