# router/sys/sys_cronjob_log.go
@@ -1,0 +1,18 @@
+package sys
+
+import (
+	"go-gin-rest-api/api/v1/sys"
+	"go-gin-rest-api/middleware"
+
+	jwt "github.com/appleboy/gin-jwt/v2"
+	"github.com/gin-gonic/gin"
+)
+
+// 任务日志
+func InitCronjobLogRouter(r *gin.RouterGroup, authMiddleware *jwt.GinJWTMiddleware) (R gin.IRoutes) {
+	router := r.Group("cronjoblog").Use(authMiddleware.MiddlewareFunc()).Use(middleware.CasbinMiddleware)
+	{
+		router.POST("/list", sys.GetCronjobLog)
+	}
+	return router
+}
